--- a/src/components/Content/content.scss
+++ b/src/components/Content/content.scss
@@ -1,5 +1,6 @@
 .content {
   padding: 70px 0 50px;
+  color: #e6ebe1;
 
   &__container {
     display: flex;
@@ -22,12 +23,13 @@
     font-size: 20px;
     line-height: 23px;
     margin: 10px 0 30px;
+    color: #e6ebe1;
   }
 
   &__link {
     display: inline-block;
     background-color: #0a3a73;
-    color: #fff;
+    color: #e6ebe1;
     padding: 15px 42px;
   }
 
@@ -47,6 +49,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 23px;
+    color: #e6ebe1;
   }
 }
 
@@ -73,7 +76,7 @@
       margin-bottom: 20px;
       font-size: 20px;
       b {
-        color: #3f3f3f;
+        color: #e6ebe1;
       }
     }
     ol {
@@ -88,6 +91,7 @@
       font-weight: 400;
       font-size: 20px;
       line-height: 23px;
+      color: #e6ebe1;
     }
     &__img {
       margin-left: 20px;
