--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-*, 
+*,
 *::before,
 *::after {
   box-sizing: border-box;
@@ -13,15 +13,21 @@ li {
   list-style: none;
 }
 p {
-  color: #3F3F3F;
+  color: #3f3f3f;
 }
 
 body {
-  background-color: #F0F0FF;
+  background-color: #f0f0ff;
   font-family: 'Times New Roman', Times, serif;
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  background-image: url('../public/background.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .App {
+  background-color: rgba($color: #000000, $alpha: 0.5) !important;
 }
 
 .container {
