--- a/src/components/Read/read.scss
+++ b/src/components/Read/read.scss
@@ -8,6 +8,7 @@
     padding: 20px 40px;
     width: 1200px;
     margin-left: 20px;
+    border-radius: 8px;
     p {
       width: 100%;
       font-size: 18px;
@@ -27,10 +28,12 @@
     }
   }
   .readLeft {
+    border-radius: 8px;
     width: 500px;
   }
 
   &__title {
+    border-radius: 8px 8px 0 0;
     border-bottom: 1px solid rgb(188, 207, 248);
     background-color: #000000;
     color: #fff;
@@ -61,5 +64,8 @@
     display: flex;
     align-items: center;
     font-size: 16px;
+  }
+  &__menu-title2 {
+    border-radius: 0 0 8px 8px;
   }
 }
